# Hackathon-II-Evolution-of-Todo

Phase-I/: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  README.md  pyproject.toml
Phase-I/history/prompts/constitution/: 001-initial-constitution.constitution.prompt.md
Phase-I/history/prompts/todo-console-app/: 002-todo-console-app-spec.spec.prompt.md  003-todo-console-app-plan.plan.prompt.md  004-todo-console-app-tasks.tasks.prompt.md  005-todo-console-app-analyze.tasks.prompt.md  006-todo-console-app-implement.green.prompt.md
Phase-I/specs/1-todo-console-app/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
Phase-I/specs/1-todo-console-app/checklists/: requirements.md
Phase-I/specs/1-todo-console-app/contracts/: cli-api.md
Phase-I/src/: cli.py  main.py  models.py  services.py
Phase-I/tests/: conftest.py  test_cli.py  test_models.py  test_services.py
Phase-II/: README.md
Phase-II-III-IV/: package-lock.json
Phase-II-III-IV/backend/: .env.example  Dockerfile
Phase-II-III-IV/backend/src/: db_init.py  main.py
Phase-II-III-IV/frontend/: package.json
Phase-II-III-IV/frontend/src/app/: globals.css
Phase-II-III-IV/frontend/src/lib/: auth-client.ts  auth.ts
Phase-II/.specify/memory/: constitution.md
Phase-II/backend/src/core/: security.py
Phase-II/backend/src/services/: agent_runner.py
Phase-II/frontend/: package-lock.json
Phase-II/frontend/src/app/: globals.css  page.tsx
Phase-II/frontend/src/components/: chat-interface.tsx  sidebar.tsx
Phase-II/frontend/src/lib/: auth.ts
(+4 files in other folders)
